tests/integration/seed/predictions/invalid/zone+classif4.jsonlines
{"uuid":"12345","annotations":{"type":{"labels":[{"value":"passeport","proba":0.999}]},"bboxes":{"entities":[{"value":"FOO","coords":[{"x":0.2303902930293,"y":0.2039203923},{"x":0.2303902930293,"y":0.2039203923},{"x":0.2303902930293,"y":0.2039203923}]}]}}}